<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/fantech_hg15"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/name"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/harga"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_orange_dark"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="2dp">
            <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stok"
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:id="@+id/stok"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:text="@string/tersedia"
                    android:layout_toRightOf="@+id/stok"
                    android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/black"
                android:text="@string/spesifikasi"/>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="87dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="Chanel"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/chanel"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="105dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="LED"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/led"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="67dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text=" Plug type"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/plug"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="64dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="Driver size"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/driver"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="43dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text=" Cable Length"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/cable"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="47dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="Headset Size"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/size"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="51dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text=" Freq. range "/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/range"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="Speaker Sensitivity"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/sensitif"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="55dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text=" Impedance"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/impedance"
                    android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="59dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text=" Directivity "/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/directivity"
                    android:textColor="@android:color/black"/>

        </TableRow>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="16dp"
                android:text="Penjual :"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
            <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:id="@+id/profile"
                    android:src="@drawable/profile"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/profile">
                <TableRow>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Fandi Arya Pratama"
                            android:textColor="@android:color/black"/>
                </TableRow>
                <TableRow>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Cimanggis Depok"
                            android:textColor="@android:color/black"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Beli Sekarang"
                android:id="@+id/beli" />
        <Button
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:text="Tambah Keranjang"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/beli" android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>